k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azuredefaultapp-deploy
  namespace: cicd-jenkins 
spec:
  selector:
    matchLabels:
      app: azuredefaultapp
  replicas: 1
  template:
    metadata:
      labels:
        app: azuredefaultapp
    spec:
      containers:
      - name: azuredefaultapp
        image: kodeval/azuredefaultapp:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: azuredefaultapp-svc
  namespace: cicd-jenkins
spec:
  selector:
    app: azuredefaultapp
  ports:
  - port: 80
  type: ClusterIP # LoadBalancer # NodePort # 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azureotherapp-deploy
  namespace: cicd-jenkins 
spec:
  selector:
    matchLabels:
      app: azureotherapp
  replicas: 1
  template:
    metadata:
      labels:
        app: azureotherapp
    spec:
      containers:
      - name: azureotherapp
        image: kodeval/azureotherapp:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: azureotherapp-svc
  namespace: cicd-jenkins
spec:
  selector:
    app: azureotherapp
  ports:
  - port: 80
  type: ClusterIP # LoadBalancer # NodePort #  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azuregolangapp-deploy
  namespace: cicd-jenkins 
spec:
  selector:
    matchLabels:
      app: azuregolangapp
  replicas: 1
  template:
    metadata:
      labels:
        app: azuregolangapp
    spec:
      containers:
      - name: azuregolangapp
        image: kodeval/azuregolangapp:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: azuregolangapp-svc
  namespace: cicd-jenkins
spec:
  selector:
    app: azuregolangapp
  ports:
  - port: 80
  type: ClusterIP # LoadBalancer # NodePort # 

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cicd-jenkins-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: azuregolangapp-svc
          servicePort: 80
        path: /go(/|$)(.*)
      - backend:
          serviceName: azureotherapp-svc
          servicePort: 80
        path: /other(/|$)(.*)
  - host: cicd.erko.digital # change the IP address here
    http:
      paths:
      - backend:
          serviceName: azuredefaultapp-svc
          servicePort: 80
        path: /
      - backend:
          serviceName: azuregolangapp-svc
          servicePort: 80
        path: /go
      - backend:
          serviceName: azureotherapp-svc
          servicePort: 80
        path: /other
